# todo-llms

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_PLAN.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  render.yaml
.github/workflows/: ci.yml  migrations.yml
app/: config.py  logging_config.py  main.py  rate_limiter.py
app/api/dependencies/: auth.py  database.py
app/api/v1/: router.py
app/web/: __init__.py  helpers.py  middleware.py
features/: accounts.feature  auth.feature  environment.py  todos.feature
features/steps/: account_steps.py  auth_steps.py  todo_steps.py
migrations/: env.py
migrations/versions/: 0001_create_users_and_todos.py  0002_create_refresh_tokens.py  0003_add_locking_fields.py  0004_add_preferences.py  0005_create_audit_logs.py  34ebd1c0249b_add_stripe_fields.py  4dfa7d9a0e6b_add_friendships_and_last_seen.py  4f71ec4dbc11_add_steps_columns_to_todos_table.py  63c4c12eb1a0_add_messages_table.py  README.md
scripts/: behave_ci.py  manual_redis_check.py
tests/: conftest.py  debug_cookie.py  test_admin_cookies.py  test_admin_cookies_bulk.py  test_admin_cookies_export.py  test_api_me.py  test_auth_lockout.py  test_auth_login.py  test_auth_logout.py  test_cookie_consent.py  test_csrf.py  test_llm_integration_real.py  test_llm_steps.py  test_logging_config.py  test_root.py  test_stripe_webhook.py  test_todo_limits.py  test_todo_steps_service.py  test_todos_crud.py  test_user_registration.py  test_web_account.py  test_web_dashboard.py  test_web_pages.py
tests/unit/: test_helpers_nl2br.py
(+66 files in other folders)
