[project]
name = "fastapi-todo-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "python-jose[cryptography]>=3.4.0",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.0.0",
    "python-dotenv>=1.2.1",
    "slowapi>=0.1.9",
    "structlog>=25.5.0",
    "email-validator>=2.0.0",
    "python-json-logger>=4.0.0",
    "itsdangerous>=2.1.2",
    "upstash-redis>=1.5.0",
    "stripe>=14.1.0",
    "pusher>=3.3.3",
]

[dependency-groups]
dev = [
    "behave>=1.3.3",
    "black>=25.12.0",
    "compare>=0.2b0",
    "coverage>=7.13.1",
    "factory-boy>=3.3.3",
    "flake8>=7.3.0",
    "httpie>=3.2.4",
    "httpx>=0.28.1",
    "nose>=1.3.7",
    "pinocchio>=0.4.3",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "requests>=2.32.5",
    "selenium>=4.39.0",
]
